Deploy da API na Nuvem (Railway)

--- a/apirest-cloud/pom.xml
+++ b/apirest-cloud/pom.xml
@@ -54,7 +54,18 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+            	<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-jar-plugin</artifactId>
+            		<configuration>
+                		<archive>
+                    		<manifest>
+                    			<addClasspath>true</addClasspath>
+                    			<mainClass>dio.apirestcloud.ApirestCloudApplication</mainClass> <!-- Substitua 'SuaClassePrincipal' pelo nome da sua classe principal -->
+                			</manifest>
+            			</archive>
+        			</configuration>
+        	</plugin>
 		</plugins>
 	</build>
-
 </project>
